// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HamburgerButton > snapshot - closed 1`] = `
<div
  class="z-20 flex flex-1 justify-center md:hidden"
>
  <button
    aria-label="Open menu"
    class="cursor-pointer focus:outline-none"
  >
    <div
      class="flex w-6 flex-col gap-1.5"
    >
      <span
        class="h-0.5 rounded-full bg-gray-300"
      />
      <span
        class="h-0.5 rounded-full bg-gray-300"
      />
      <span
        class="h-0.5 rounded-full bg-gray-300"
      />
    </div>
  </button>
</div>
`;

exports[`HamburgerButton > snapshot - open 1`] = `
<div
  class="z-20 flex flex-1 justify-center md:hidden"
>
  <button
    aria-label="Close menu"
    class="cursor-pointer focus:outline-none"
  >
    <div
      class="flex w-6 flex-col gap-1.5"
    >
      <span
        class="h-0.5 rounded-full bg-gray-300"
      />
      <span
        class="h-0.5 rounded-full bg-gray-300"
      />
      <span
        class="h-0.5 rounded-full bg-gray-300"
      />
    </div>
  </button>
</div>
`;
